[workspace]
members = [
  "crates/chain-core",
  "crates/cow-abi",
  "crates/storage-sqlite",
  "crates/pipeline",
  "crates/exex-node",
]
resolver = "2"

[workspace.dependencies]
# Reth ExEx + node glue (use Git HEAD as in docs)
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git" }

# ABI + primitives
alloy-sol-types = "0.8"
alloy-sol-macro = "0.8"

# infra
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# storage
rusqlite = { version = "0.32", features = ["bundled", "array"] }

# http (optional api)
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
