[package]
name = "exex-node"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }

reth = { workspace = true }
reth-exex = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-tracing = { workspace = true }

pipeline = { path = "../pipeline" }
storage-sqlite = { path = "../storage-sqlite" }
chain-core = { path = "../chain-core" }